tests/rosetta/out/Smalltalk/append-a-record-to-the-end-of-a-text-file.out
/workspace/mochi/tests/rosetta/out/Smalltalk/append-a-record-to-the-end-of-a-text-file.st:4: parse error, expected '|' or identifier
